tests/call/number.out
[31merror[error]: 'number' object is not callable
----- Traceback -----
  ┌─ <unknown>:1:5
  | 
1 | 123()
  |      ^
[0m